Project

General

Profile

Actions

Bug #49245

closed

rbd: harmless error messages when running `mirror pool status --verbose` for pool with non-mirror images

Added by Mykola Golub over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When running `rbd mirror pool status --verbose` against a pool that contains a non-mirroring image, the command works as expected, but an error messages like below is printed, when the librbd tries to get mirroring info for a non-mirroring image:

2021-02-11T09:13:22.986+0000 7fdf967fc640 -1 librbd::mirror::GetStatusRequest: 0x55f9e3742dd0 handle_get_info: failed to retrieve mirroring state: (2) No such file or directory

We should suppress such messages.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #49263: octopus: rbd: harmless error messages when running `mirror pool status --verbose` for pool with non-mirror imagesResolvedMykola GolubActions
Copied to rbd - Backport #49264: pacific: rbd: harmless error messages when running `mirror pool status --verbose` for pool with non-mirror imagesResolvedJason DillamanActions
Actions #1

Updated by Mykola Golub over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 39409
Actions #2

Updated by Jason Dillaman over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49263: octopus: rbd: harmless error messages when running `mirror pool status --verbose` for pool with non-mirror images added
Actions #4

Updated by Backport Bot over 3 years ago

  • Copied to Backport #49264: pacific: rbd: harmless error messages when running `mirror pool status --verbose` for pool with non-mirror images added
Actions #5

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF